Fix About page text layout (remove fixed heights, pixel-perfect spacing)

--- a/css/about.css
+++ b/css/about.css
@@ -28,7 +28,6 @@
     text-align: center;
     color: #36536B;
     margin-bottom: 44px;
-    height: 152px;
 }
 
 .about_title {
@@ -57,7 +56,6 @@
     text-align: center;
     color: #6C8294;
     margin-bottom: 84px;
-    height: 160px;
 }
 
 .about_text_culture {
@@ -67,7 +65,6 @@
     text-align: center;
     color: #6C8294;
     margin-bottom: 63px;
-    height: 188px;
 }
 
 .about_text_people {
@@ -76,5 +73,4 @@
     line-height: 28px;
     text-align: center;
     color: #6C8294;
-    height: 104px;
 }
